--- a/microb_uy_mobile/MainPage.xaml
+++ b/microb_uy_mobile/MainPage.xaml
@@ -12,7 +12,7 @@
             <DataTemplate>
                 <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="Transparent" HeightRequest="225" WidthRequest="150" Margin="10">
                     <StackLayout Spacing="5">
-                        <Image Source="diego_forlan.jpg" Aspect="AspectFill" HeightRequest="100" WidthRequest="150" />
+                        <Image Source="{Binding PerfilImg}" Aspect="AspectFill" HeightRequest="120" WidthRequest="120" />
                         <Label Text="{Binding Nombre}" TextColor="Black" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" FontSize="16">
                             <Label.TextDecorations>
                                 <OnPlatform x:TypeArguments="TextDecorations">
@@ -30,13 +30,10 @@
                                 </DataTrigger>
                                 <DataTrigger TargetType="Label" Binding="{Binding Estado}" Value="False">
                                     <Setter Property="Text" Value="Inactivo" />
-                                    <!-- Puedes establecer otro color para el caso de inactividad si lo deseas -->
                                     <Setter Property="BackgroundColor" Value="DarkRed" />
                                 </DataTrigger>
                             </Label.Triggers>
                         </Label>
-
-                        <!--<Label Text="{Binding Url}" TextColor="Gray" LineBreakMode="WordWrap" />-->
                     </StackLayout>
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnCardTapped" />
