--- a/microb_uy_mobile/Pages/Integrations/IntegrationsMainPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/IntegrationsMainPage.xaml
@@ -3,16 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="microb_uy_mobile.Pages.Integrations.IntegrationsMainPage"
              IconImageSource="integrations_icon.png">
-
-    <!-- Agrega un Grid para el título centrado en la parte superior -->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <!-- Título centrado -->
         <Label Text="Integraciones" Margin="0, 20" HorizontalOptions="CenterAndExpand" VerticalOptions="Center" FontSize="Large" FontAttributes="Bold" />
+
+        <Label IsVisible="{Binding IsLabelVisible}" Text="Este foro no tiene integraciones" FontAttributes="Bold" FontSize="16" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Grid.Row="1"/>
 
         <!-- Colección de integraciones -->
         <CollectionView Grid.Row="1" ItemsSource="{Binding Instances}" SelectionMode="Single">
@@ -23,9 +22,8 @@
                 <DataTemplate>
                     <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="Transparent" HeightRequest="250" WidthRequest="150" Margin="10">
                         <StackLayout Spacing="5">
-                            <Image Source="dotnet_bot.svg" Aspect="AspectFill" HeightRequest="100" WidthRequest="150" />
+                            <Image Source="{Binding PerfilImg}" Aspect="AspectFill" HeightRequest="100" WidthRequest="150" />
                             <Label Text="{Binding Nombre}" TextColor="Black" FontAttributes="Bold" />
-                            <Label Text="{Binding Url}" TextColor="Gray" LineBreakMode="WordWrap" />
                         </StackLayout>
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="OnCardTapped" />
