--- a/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchHashtagsPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchHashtagsPage.xaml
@@ -1,5 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:microb_uy_mobile.ViewModels.Integrations"
+             x:DataType="viewModels:IntegrationsSearchHashtagsViewModel"
+             xmlns:dto="clr-namespace:microb_uy_mobile.DTOs"
              x:Class="microb_uy_mobile.Pages.Integrations.SearchPages.IntegrationsSearchHashtagsPage"
              xmlns:local="clr-namespace:microb_uy_mobile.Pages.Integrations.SearchPages"
              IconImageSource="search_icon_hashtag.png">
@@ -8,17 +11,27 @@
             <!-- Contenido específico de la pestaña "Hashtags" -->
             <Grid>
                 <SearchBar x:Name="_searchBar" Placeholder="Buscar en microbuy" Grid.Column="0"/>
-                <!--<Button Text="Buscar" Clicked="OnSearchButtonClicked" Grid.Column="1" WidthRequest="40" HeightRequest="40"  HorizontalOptions="EndAndExpand"/>-->
+                <Button Text="Buscar" Command="{Binding GetHashTagListCommand}" 
+                CommandParameter="{Binding Text, Source={x:Reference _searchBar}}"
+                Grid.Column="1" WidthRequest="40" HeightRequest="40"  HorizontalOptions="EndAndExpand"/>
             </Grid>
 
-            <Label IsVisible="false" x:Name="NoResults" Text="Busca Hashtags!" FontAttributes="Bold" FontSize="16" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            <Label IsVisible="{Binding IsLabelVisible}" x:Name="NoResults" Text="{Binding LabelMsg}" FontAttributes="Bold" FontSize="16" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
 
             <!-- Colección y plantilla para la pestaña "Hashtags" -->
-            <CollectionView x:Name="SearchResultsHashtags" IsVisible="true" VerticalOptions="FillAndExpand" VerticalScrollBarVisibility="Always"
-                                ItemsSource="{Binding HashTagList}">
+            <CollectionView x:Name="SearchResultsHashtags" VerticalOptions="FillAndExpand" VerticalScrollBarVisibility="Always"
+                    ItemsSource="{Binding HashTagList}"
+                    RemainingItemsThreshold="1"
+                    RemainingItemsThresholdReachedCommand="{Binding LoadMoreDataCommand}">
+                <CollectionView.Header>
+                    <StackLayout>
+                        <ActivityIndicator IsRunning="True" IsVisible="{Binding IsBusy}"
+                                   HeightRequest="40" WidthRequest="40" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </CollectionView.Header>
                 <CollectionView.ItemTemplate>
                     <!-- SearchPageHashtags.xaml -->
-                    <DataTemplate>
+                    <DataTemplate x:DataType="dto:HashTagDto">
                         <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="White" Margin="10">
                             <StackLayout Spacing="5">
                                 <!-- Encabezado del hashtag: Nombre del hashtag -->
@@ -33,6 +46,12 @@
                         </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
+                <CollectionView.Footer>
+                    <StackLayout>
+                        <ActivityIndicator IsRunning="True" IsVisible="{Binding IsLoading}"
+                                   HeightRequest="40" WidthRequest="40" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </CollectionView.Footer>
             </CollectionView>
         </StackLayout>
     </ContentPage.Content>
